--- a/trainers/templates/trainers/teams.html
+++ b/trainers/templates/trainers/teams.html
@@ -6,8 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<h2 id="my_students">ВСЕ группы и ученики</h2>
-<div id="cards">
+<div class="cards">
     {%if teams%}
     {% for team in teams %}
     <details>
