--- a/trainers/templates/trainers/clients.html
+++ b/trainers/templates/trainers/clients.html
@@ -8,9 +8,9 @@
 {% block content %}
 <div id="main_student_content">
     <div id="buttons">
-    <button class="change_btn" onclick="showAllClients()">Все клиенты</button>
-    <button class="change_btn" onclick="showAllGroups()">Группы</button>
-    <button class="change_btn" onclick="showAllSports()">Вид спорта</button>
+    <button id="all_clients_btn" class="change_btn" onclick="showAllClients()">Все клиенты</button>
+    <button id="all_groups_btn" class="change_btn" onclick="showAllGroups()">Группы</button>
+    <button id="all_sports_btn" class="change_btn" onclick="showAllSports()">Вид спорта</button>
     </div>
     <div id="all_clients">
         <div class="cards">
@@ -103,7 +103,7 @@
         <div class="common_form">
             <button class="change_btn" onclick="showGroupForm()"> Создать группу</button>
             <div class="form" id="form_add_team">
-                <form class="decor" action="{% url 'team_add_action' %}" method="post">
+                <form class="decor" action="#" method="post">
                     {% csrf_token %}
                     <div class="form-left-decoration"></div>
                     <div class="form-right-decoration"></div>
